stratosource/sfdiff/testfiles/rtest/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Ownership_Type__c</fullName>
        <label>Ownership Type</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>P_L__c</fullName>
        <label>P &amp; L</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerStatuses__c</fullName>
        <label>Partner Status</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced - ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced - Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Premier - ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier - Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready - ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready - Reseller</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Status__c</fullName>
        <label>Partner Account Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Center_ID__c</fullName>
        <label>Partner Center ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Points__c</fullName>
        <label>Partner Points</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Prospect_Type__c</fullName>
        <description>This field is used for CGS Consultants</description>
        <inlineHelpText>This field is used for CGS Consultants</inlineHelpText>
        <label>Partner Prospect Type</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Type__c</fullName>
        <label>Partner Type</label>
        <picklist>
            <picklistValues>
                <fullName>VAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integrator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentTerms__c</fullName>
        <description>Finance field - read only for all other users</description>
        <label>Payment Terms</label>
        <picklist>
            <picklistValues>
                <fullName>Prepay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net 60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IMMEDIATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM +1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM +2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50 NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM +60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM Next Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM+30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM+40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM+45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSOLIDATE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM+60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM+120</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOM+90</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepayment Reqd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO10th+40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO15th+60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO20th+45</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO25th+40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONSOLIDATE TERM</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PreferredHWVendor__c</fullName>
        <label>Preferred HW Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t Have One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fujitsu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Revenue__c</fullName>
        <description>Implemented for CGS</description>
        <label>Previous Year Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PrimaryBillToAcct__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account designated by Credit as being the primary bill to site for account</description>
        <label>Primary Bill To Acct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PrimaryBillingAccountNumber__c</fullName>
        <externalId>true</externalId>
        <label>Primary Billing Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryIndustry__c</fullName>
        <description>Detailed description of industry</description>
        <label>Primary Industry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PrimaryPartnerContact__c</fullName>
        <description>Primary contact set during migration.  For new migrations there are no users yet so store the contact here.</description>
        <label>Primary Partner Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryPartnerUser__c</fullName>
        <label>Primary Partner User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AccountsByPrimaryPartnerUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryStorageVendor__c</fullName>
        <label>Primary Storage Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>NetApp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>StorageTek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Billing_Account_Name__c</fullName>
        <description>Field used by credit team containing the Oracle Account Name which corresponds to the Primary Billing Account Number on the Account</description>
        <label>Primary Billing Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_HW_Vendor_Other__c</fullName>
        <label>Primary HW Vendor (Other)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Hardware_Vendor__c</fullName>
        <label>Primary Hardware Vendor</label>
        <picklist>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_Partner_RHN__c</fullName>
        <formula>IF(
PrimaryPartnerUser__c &lt;&gt; &quot;No Primary  Partner User&quot;,
PrimaryPartnerUser__r.Contact.LoginName__c,
&quot;No Primary Partner User RHN&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Partner RHN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Services__c</fullName>
        <label>Products &amp; Services</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Profitability_vs_Industry__c</fullName>
        <label>Profitabiliy vs. Industry</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchasing_Process__c</fullName>
        <label>Purchasing Process</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RHNLogin__c</fullName>
        <label>RHN Login</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Sales_Strategy__c</fullName>
        <label>RH Sales Strategy</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RH_Webinar_Date__c</fullName>
        <description>Implemented for CGS

Partner agrees to attend RH Webinar by this date.</description>
        <inlineHelpText>Partner agrees to attend RH Webinar by this date.</inlineHelpText>
        <label>Attend RH Webinar by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>R_D__c</fullName>
        <label>R&amp;D</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Major_Events__c</fullName>
        <label>Recent Major Events</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RedHatSyncable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to know when to generate Sync Events for the synchronization to occur between Salesforce and Red Hat internal (including but not limited to Locator)</description>
        <label>Sync To Red Hat Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Red_Hat_Agreements_on_File__c</fullName>
        <label>Red Hat Agreements on File</label>
        <picklist>
            <picklistValues>
                <fullName>Click-Through/Subscription Order Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cygwin License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Framework /Master Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Framework /MSA - SOW/Work Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Partner - OEM Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Partner - OEM Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Partner - Runtime Advanced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Partner - Runtime Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hosting Provider Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISV Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Learning Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None on File</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Services  - SOW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Red Hat Academy Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller/Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subscription Agreement with RSS Addendum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toolchain/GNUPro Services Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Partner</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Red_Hat_or_JBoss_certified_employees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Red Hat or JBoss certified employees?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <description>Indicates the last day a reminder was sent for a True Up account</description>
        <label>Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reminder_Frequency__c</fullName>
        <description>Indicates how often a rep receives a reminder about a True Up account</description>
        <label>Reminder Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Annually</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Amount__c</fullName>
        <label>Renewal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revenue_to_Date__c</fullName>
        <label>Revenue to Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SEA_Concern__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SEA Concern</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Certification_Acheivement_by_Date__c</fullName>
        <description>Implemented for CGS</description>
        <inlineHelpText>Partner agrees to obtain one Sales Certification acheivement by this date</inlineHelpText>
        <label>Sales Certification Acheivement by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Growth__c</fullName>
        <label>Sales Growth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Reviewed__c</fullName>
        <description>Last date account was reviewed for ownership by Salesops.</description>
        <label>Sales Ops Reviewed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Select_Specialization_s__c</fullName>
        <description>Red Hat Specializations</description>
        <label>Select Specialization(s)</label>
        <picklist>
            <picklistValues>
                <fullName>JBoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtualization</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service_Area__c</fullName>
        <label>Service Area</label>
        <picklist>
            <picklistValues>
                <fullName>NORTH AMERICA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANADA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEXICO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNITED STATES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US-CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US-EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US-MIDWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US-NORTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US-NORTHWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US-SOUTHEAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US-SOUTHWEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US-WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALABAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALASKA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMERICAN SAMOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARIZONA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARKANSAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALIFORNIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COLORADO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONNECTICUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DELAWARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISTRICT OF COLUMBIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEDERATED STATES OF MICRONESIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FLORIDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GEORGIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GUAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HAWAII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDAHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILLINOIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIANA</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Service_Offerings__c</fullName>
        <label>Service Offerings</label>
        <picklist>
            <picklistValues>
                <fullName>Jboss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHEL</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Significant_Branch_Locations__c</fullName>
        <label>Significant Branch &amp; Locations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Size_of_Companies_Targeted__c</fullName>
        <description>Implemented for CGS</description>
        <inlineHelpText>What size companies does the partner target?</inlineHelpText>
        <label>Size of Companies Targeted</label>
        <picklist>
            <picklistValues>
                <fullName>Fortune 1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium (&lt;999)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small (&lt;99)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Small (&lt;20)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Software_Focus__c</fullName>
        <label>Software Focus</label>
        <picklist>
            <picklistValues>
                <fullName>OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middleware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtualization</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Software_Management__c</fullName>
        <label>Software Management</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Partners__c</fullName>
        <label>Solution Partners</label>
        <picklist>
            <picklistValues>
                <fullName>BEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMC Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyperion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM SWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sybase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Symantec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VMWare</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Special_Service_Offerings_or_Skills__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Service Offerings or Skills</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Storage__c</fullName>
        <label>Storage</label>
        <picklist>
            <picklistValues>
                <fullName>JBOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAN</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SubTerritory__c</fullName>
        <label>SubTerritory</label>
        <picklist>
            <controllingField>Territory1__c</controllingField>
            <picklistValues>
                <fullName>East Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINANCIAL SERVICES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEALTHCARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEDIA AND TECH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ontario</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West Canada</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subregion__c</fullName>
        <label>Subregion</label>
        <picklist>
            <controllingField>Global_Region__c</controllingField>
            <picklistValues>
                <fullName>ASEAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southeast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fed Sled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Volume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANDINO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEACA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northwest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soutwest</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subsidiary_Status__c</fullName>
        <label>Subsidiary Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Super_Industry__c</fullName>
        <label>Super Industry</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sweet_Spot__c</fullName>
        <inlineHelpText>Most frequent offerings the partner produces</inlineHelpText>
        <label>Sweet Spot</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Target_Market_Size__c</fullName>
        <label>Target Market Size</label>
        <picklist>
            <picklistValues>
                <fullName>Small</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Target_Revenue_for_Red_Hat_yearly__c</fullName>
        <label>Target Revenue for Red Hat (Yearly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Technical_Course_Enrolled__c</fullName>
        <description>Implemented for CGS

Name of the technical course partner is enrolled in.</description>
        <inlineHelpText>Name of the technical course partner is enrolled in.</inlineHelpText>
        <label>Technical Course Enrolled</label>
        <length>45</length>
        <type>Text</type>
    </fields>
</CustomObject>